# rust-axum-performance

./: .env  Cargo.toml  README.md  performance.db
src/: app.rs  main.rs
src/application/: use_case.rs
src/domain/: domains.rs  mod.rs  repositories.rs  services.rs
src/infrastructure/database/: adapter.rs  config.rs  mapper.rs  mod.rs  models.rs
src/infrastructure/web/: dtos.rs  handlers.rs  mapper.rs  mod.rs
